# my-test

./: .gitignore  .gitmodules  2023_11_19_PHY_IUR.py  2023_11_26_PHY_PUI-QIRt.py  2023_12_03_PZ220-100.py  2024_11_09_terraria.py  2024_11_23_colors.py  2024_11_23_force.py  256color.c  ASCII.c  ASCII.cpp  ASCII.py  CPU.c  LICENSE  MEM.c  MEN.c  Makefile  Physical.py  Physical2.py  Physical3.py  Progress_bar.c  README.md  README.org  RSA.c  Reverse_progress_bar.c  Text_effects.c  Type_conversion.c  Type_conversion.py  Type_conversion.sh  Type_conversion_3gp.c  XP.c  add_info.sh  all_in_one.sh  arch-fast-install.c  auto-do.c  auto-install.c  bilibili_build.sh  bilibili_build_3gp.sh  bit.c  boom.c  (+55 more)
c/: .gitignore  Makefile  TODO.txt  build.c  config.c
headfile/: kbhit.h
include/: head.h  include.h  tools.h
javascript/: cloud_music.js  view_html.js  zhihu.js
manim/: 2023_11_04_PHY_power.py  2023_11_19_PHY_IUR.py  2023_11_26_PHY_PUI-QIRt.py  2023_12_03_PZ220-100.py  2024_01_24_PHY_QIRt.py  2024_11_09_terraria.py  2024_11_23_colors.py  2024_11_23_force.py  2025_05_05_速度合成分解问题.py  2026_01_17_无职人物关系图.py  example.py
music_tool/: add_info.sh
python/: .gitignore  ASCII.py  ETS_find_answer.py  Ngram.py  README.org  TODO.txt  arch_countpkg.py  auto_run.py  bilibili_build.py  count_input.py  diff_dirs.py  dir2txt.py  family.py  find_duplicates.py  gen_music_synth_str.py  img2txt.py  limitUsed.py  limitUsed.pyw  lrc.py  merge2tex.py  move_media.py  music_download.py  org2blogs.py  org_html_export.py  orgreader.py  orgreader2.py  pytools.py  record_mem_render.py  renames.py  split_novel.py  talking_local.py  talking_local_webui.py  timeline.py  todo.py  uniq_files.py  update_archlinux_package.py  video2char.py
python/orgreader2/: .gitignore  pyproject.toml
python/orgreader2/src/orgreader2/: __init__.py  orgreader2.py  pytools.py
res/: history_note_input.txt  neuro_output.txt
rust/: Cargo.toml
shell/: README.org  add_info.sh  bilibili_build.sh  bilibili_web_trans.sh  extract_elf_source_paths.sh  (+11 more)
src_c/: .gitignore  ALSA.c  ALSA_str_gen.c  ALSA_str_read.c  ASCII.c  CMakeLists.txt  Text_effects.c  Type_conversion.c  arch-fast-install.c  build.sh  clock.c  count_input.c  farme.c  filelist.c  flip.c  fork.c  get_elf_str.c  gettime.c  guess_number.c  history_note.c  input.c  input_to_hex.c  lrc.c  maze.c  neuro.c  orgreader.c  print_in_box.c  protectFiles.c  render3d.c  script-helper.c  sin.c  sizeof.c  social.c  socket.c  spinning_top.c  tetris.c  try_iconv.c
src_c/res/: .gitignore  ALSA_NeverGonnaGiveYouUp.txt  ALSA_OneLastKiss.txt  ALSA_OneLastKiss_part_a.txt  ALSA_OneLastKiss_part_b1.txt  ALSA_OneLastKiss_part_b2.txt  ALSA_OneLastKiss_part_c.txt  ALSA_SuperMario.txt  ALSA_TryEverything.txt  ALSA_misc.txt  ALSA_style.vim  neuro_output2.txt  spinning_top.txt  tetris_save_example.txt
(+137 files in other folders)
